Wed Nov  7 09:15:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_get): avoid inadvertent symbol creation.

Wed Nov  7 07:52:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (rb_enum_cycle_size): prefix with rb.

Wed Nov  7 04:32:15 2012  Luis Lavena  <luislavena@gmail.com>

	* test/ruby/test_file_exhaustive.rb: Remove FIXME skip on Windows
	  specific test because the test in question was already fixed.

Wed Nov  7 03:45:12 2012  Luis Lavena  <luislavena@gmail.com>

	* ext/zlib/extconf.rb: Recognize zlibwapi as linking library.
	  Patch by Daniel Berger.

	  [ruby-core:44979] [Feature #6421]

Wed Nov  7 02:06:40 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* enumerator.c: New method #size; constructor accepts size.
	                Have #to_enum accept a block
	                Warn when using deprecated form of constructor
	                Support #size for enumerators created from enumerators
	                Support for lazy.{map|flat_map|...}.size.

	* include/ruby/intern.h: RETURN_SIZED_ENUMERATOR for support of
	  sized enumerators.

	* array.c: Support for various enumerator.size.

	* enum.c: ditto.

	* hash.c: ditto.

	* numeric.c: ditto.

	* range.c: ditto.

	* string.c: ditto.

	* struct.c: ditto.

	* vm_eval.c: ditto.

Tue Nov  6 20:40:28 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* object.c (rb_mod_const_get): Fix constant missing exception class
	  and message to maintain backwards compatibility. Constant search
	  should start at Object when constant starts with '::'

	* test/ruby/test_module.rb: test for fixes

Tue Nov  6 16:50:00 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* lib/tempfile.rb (Tempfile#inspect): fix confusing #inspect.
	  previous Tempfile#inspect says it is a File, but actually
	  it is not a File.

	    t = Tempfile.new("foo") #=> #<File:/tmp/foo20121106-31970-1ffbum0>
	    t.is_a? File #=> false

	  now Tempfile#inspect returns like:

	    t = Tempfile.new("foo")