@@ -1,3 +1,8 @@
+Wed Nov  7 11:48:14 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* misc/ruby-additional.el (ruby-mode-set-encoding): now encoding needs
+	  to be set always explicitly actually.  [Feature #6679]
+
 Wed Nov  7 09:15:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* object.c (rb_mod_const_get): avoid inadvertent symbol creation.
